class AppStrings {
  // Tela de Boas-vindas
  static const String welcomeTitle = 'Bem-vindo';
  static const String welcomeSubtitle =
      'Prepare-se para se divertir aprendendo!';
  static const String enterButton = 'Entrar';

  // Tela de Cadastro
  static const String signupTitle = 'Criar Conta';
  static const String signupSubtitle = 'Cadastre-se para começar';
  static const String nameLabel = 'Nome Completo';
  static const String namePlaceholder = 'Digite seu nome';
  static const String emailLabel = 'E-mail';
  static const String emailPlaceholder = 'seu@email.com';
  static const String passwordLabel = 'Senha';
  static const String passwordPlaceholder = 'Digite sua senha';
  static const String confirmPasswordLabel = 'Confirmar Senha';
  static const String confirmPasswordPlaceholder = 'Digite sua senha novamente';
  static const String signupButton = 'Cadastrar';
  static const String alreadyHaveAccount = 'Já tem uma conta?';
  static const String loginLink = 'Entrar';

  // Tela de Login
  static const String loginTitle = 'Login';
  static const String loginButton = 'Entrar';
  static const String dontHaveAccount = 'Não tem conta?';
  static const String signupLink = 'Cadastre-se';
  static const String forgotPassword = 'Esqueceu a senha?';

  // Tela de Perfil
  static const String profileTitle = 'Perfil';
  static const String editProfile = 'Editar';
  static const String help = 'Ajuda';
  static const String about = 'Sobre';

  // Tela de Ajuda
  static const String helpTitle = 'Ajuda';

  // Tela de Sobre
  static const String aboutTitle = 'Sobre';
}
